--- a/content/3-MigrateToTarget/3.1-Aurora/3.1.1-SchemaConv/3.1.1.1-InstallSCT.md
+++ b/content/3-MigrateToTarget/3.1-Aurora/3.1.1-SchemaConv/3.1.1.1-InstallSCT.md
@@ -20,10 +20,12 @@ Reconnected the EC2 instance we used to prepare the source database via rdp or F
 1. Accept the terms and Conditions.
 
 {{% notice note %}}
-Aurora MySQL will need some additional permissions before we run SCT, so the previous steps before proceeding further down this section.
+Aurora MySQL will need some additional permissions before we run SCT, so make your you did the following steps before proceeding to the next section.
 {{% /notice %}}
 
-1. Open **MySQL Workbench 8.0 CE** from within the EC2 server, and create a new database connection for the target Aurora database using the following values Please note the password is not provided below you need to goto Secrets Manager and open DMSDBSecret and reveal the SQL Server password. It is also on first Cloudformation Stack's output tab under SQL Server password (yes this is mysql but the passwords are the same for sql server & mysql in this case):
+
+{{%expand "Expand to see this section if your migration target schema is Aurora MySQL" %}}
+1. Open **MySQL Workbench 8.0 CE** from within the EC2 server, and create a new database connection for the target Aurora database using the following values. Please note the password is not provided below you need to go to **Secrets Manager** and open **DMSDBSecret** and reveal the SQL Server password. It is also on first Cloudformation Stack's output tab under SQL Server password (yes this is mysql but the passwords are the same for sql server & mysql in this case):
 
 
     |  Parameter	 |  Value  |
@@ -70,3 +72,4 @@ Aurora MySQL will need some additional permissions before we run SCT, so the pre
 After execution, the output should look something like the image below. We suggest you keep MySQL workbench open as you'll come back to it later in the DMS section.
 
 You can now change the EC2 instance you are RDP-ed into back to the Schema conversion tool and click Next below.
+{{% /expand%}}
