--- a/content/3-MigrateToTarget/3.1-Aurora/3.1.2-Migration/3.1.2.1-Configure.md
+++ b/content/3-MigrateToTarget/3.1-Aurora/3.1.2-Migration/3.1.2.1-Configure.md
@@ -26,7 +26,7 @@ During the full load process, AWS DMS as default does not load tables in any par
     drop index set_sporting_event_idx on  dms_sample.sporting_event_ticket;
     ```
 
-    For SQL Source please use code below:
+    For MS SQL Server Source please use code below:
 
     ```sql
     ALTER TABLE dms_sample_dbo.player
