--- a/content/3-MigrateToTarget/3.3-S3/3.3.1-RepInstance.md
+++ b/content/3-MigrateToTarget/3.3-S3/3.3.1-RepInstance.md
@@ -1,8 +1,8 @@
 ---
-title: "Configure the Target Database"
-weight: 2
+title: "Create a DMS replication instance"
+weight: 1
 chapter: false
-pre: "<b> 3.1.2.2. </b>"
+pre: "<b> 3.3.1. </b>"
 ---
 
 The following illustration shows a high-level view of the migration process.
