--- a/content/3-MigrateToTarget/3.3-S3/3.3.3-CreateEndpoint.md
+++ b/content/3-MigrateToTarget/3.3-S3/3.3.3-CreateEndpoint.md
@@ -2,7 +2,7 @@
 title: "Create DMS Source and Target Endpoints"
 weight: 3
 chapter: false
-pre: "<b> 3.1.2.3. </b>"
+pre: "<b> 3.3.3. </b>"
 ---
 
 Now that you have a replication instance, you need to create source and target endpoints for the sample database.
@@ -55,19 +55,14 @@ Now that you have a replication instance, you need to create source and target e
 1. Follow the same steps to create another endpoint for the Target Aurora RDS Database (**dms_sample_dbo** or **dms_sample** depending on your source db) using the following values Please note the password is not provided below you need to goto Secrets Manager and open DMSDBSecret and reveal the SQL Server password. It is also on first Cloudformation Stack's output tab under SQL Server password (yes this is mysql but the passwords are the same for sql server & mysql in this case) :
 
     |  Parameter	 |  Value  |
+    |----------------|-----------------|
     |  Endpoint Type	 |  Target endpoint  |
-    |  Select RDS DB instance	 |  Checked for all DB targets  |
-    |  Select RDS DB instance	 |  <StackName>-AuroraMySQLInstance  |
-    |  Endpoint Identifier	 |  aurora-mysql-target  |
+    |  Endpoint Identifier	 |  `**S3-target**`  |
     |  Descriptive Amazon Resource Name	 |  leave blank  |
-    |  Target Engine	 |  Amazon Aurora MySQL  |
-    |  Access to Endpoint database Radio Button	 |  Select/click **Provide access information Manually**  |
-    |  Server Name	 |  TargetAuroraMySQLEndpoint or it should auto populate  |
-    |  Port	 |  3306  |
-    |  SSL Mode	 |  none  |
-    |  User Name	 |  `**dbadmin**`  |
-    |  Password	 |  See Cloudformation Output tab & DMSDBSecretP or look it up in AWS Secrets Manager  |
-    |  Test endpoint connection -> VPC	 |  <VPC ID with DMSVpc in the name from Environment Setup Step>  |
-    |  Replication Instance	 |  `**cfn-DMSReplication**` or `**DMSReplication**` or the one you created if it is ready  |
+    |  Target Engine	 |  Amazon S3  |
+    |  Server Name	 |  < ARN of the `**dms-vpc-role**` >  |
+    |  Bucket Name	 |  < Name of Your S3 Bucket >  |
+    |  Bucket folder	 |  `**dmstargetfolder**`  |
+
 
 1. Once the information has been entered, select the existing DMS Replcation instance (the one without your initials) and click **Run Test**. When the status turns to successful, click **Create endpoint**.
