--- a/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.2-Migration/3.1.2.2-RepInstance.md
+++ b/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.2-Migration/3.1.2.2-RepInstance.md
@@ -24,7 +24,7 @@ The following illustration shows a high-level view of the migration process.
     |  Name	 |  DMSReplication-myinitials  |
     |  Descriptive Amazon Resource name(ARN)	 |  leave blank  |
     |  Description	 |  Optional or Replication server for Database Migration  |
-    |  Instance Class	 |  dms.c5.xlarge  |
+    |  Instance Class	 |  `**dms.c5.xlarge**`  |
     |  Engine version	 |  Leave the default value  |
     |  High Availability/Multi-AZ	 |  Dev or Test workload(Single-AZ)  |
     |  Allocated storage (GB)	 |  50  |
