--- a/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.2-Migration/3.1.2.6-ReplicateChange.md
+++ b/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.2-Migration/3.1.2.6-ReplicateChange.md
@@ -2,12 +2,14 @@
 title: "Replicate Data Changes"
 weight: 6
 chapter: false
-pre: "<b> 3.3.6. </b>"
+pre: "<b> 3.1.2.6. </b>"
 ---
 
 Now you are going to simulate a transaction to the source database by updating the sport_type table. The Database Migration Service will automatically detect and replicate these changes to the target database.
 
 For Oracle Source:
+
+{{% expand "Expand this if your source DB type is Oracle" %}}
 
 1. On the EC2 instance you RDP-ed into, use **Oracle SQL Developer** connect to the source Oracle RDS.
 
@@ -32,6 +34,9 @@ For Oracle Source:
 
     SELECT * FROM dms_sample.sport_type; 
     ```
+{{% /expand %}}
+
+{{% expand "Expand this if your source DB type is Microsoft SQL Server" %}}
 
 For SQL Server Source:
 
@@ -75,12 +80,9 @@ For SQL Server Source:
 
     GO
     ```
+{{% /expand %}}
 
-1. Now go back to target S3 bucket and navigate to **_sport_type_** folder. You should see new file with latest timestamp.
-
-
-1. Download and open the CSV file.
-
+Repeat steps [from prior screen](../3.1.2.4-CreateTask.md) that selected the contents of **sport_type** table in the target database.
 
 {{% notice info %}}
 The new records for that you added for basketball, cricket, hockey, soccer, volleyball to the sports_type table in the source database have been replicated to your dms_sample_ database. You can further investigate the number of inserts, deletes, updates, and DDLs by viewing the Table statistics of your Database migration tasks in AWS console.
