--- a/content/3-MigrateToTarget/3.2-S3/3.2.4-CreateTask.md
+++ b/content/3-MigrateToTarget/3.2-S3/3.2.4-CreateTask.md
@@ -2,7 +2,7 @@
 title: "Create a DMS Migration Task"
 weight: 4
 chapter: false
-pre: "<b> 3.1.2.4. </b>"
+pre: "<b> 3.2.4. </b>"
 ---
 
 AWS DMS uses **Database Migration Tasks** to migrate the data from source to the target database.
@@ -13,10 +13,10 @@ AWS DMS uses **Database Migration Tasks** to migrate the data from source to the
 
     |  Parameter 	|  Value  |
     |------------|---------------|
-    |  Task identifier		|  `source-to-AuroraMySQL-target`  |
+    |  Task identifier		|  `source-to-s3-target`  |
     |  Replication instance		|  `cfn-dmsreplication` or just `dmsreplication`  |
     |  Source database endpoint		|  your source database SQL Server or Oracle etc from prior step  |
-    |  Target database endpoint		|  `aurora-target` or `cfn-auroramysqlinstance` or whatever you named it in prior step  |
+    |  Target database endpoint		|  `s3-target` or whatever you named it in prior step  |
     |  Migration type		|  Migrate existing data and replicate ongoing changes  |
     |  CDC stop mode		|  Don’t use custom CDC stop mode  |
     |  Create recovery table on target DB		|  leave blank/unchecked  |
@@ -57,45 +57,55 @@ If the **Create Task** screen does not recognize any schemas, make sure to go ba
 
 5. Next, expand the Transformation rules section, and click on Add new transformation rule using the following values:
 
-    - For Oracle source, use:
+    {{% expand ">>  For Oracle source, use this:" %}}
 
-        - Rule 1:
+- Rule 1:
 
-        |  Parameter	 |  Value  |
-        |----------|------------|
-        |  Target	 |  Schema  |
-        |  Schema Name	 |  DMS_SAMPLE  |
-        |  Action	 |  Make lowercase  |
+    |  Parameter	 |  Value  |
+    |----------|------------|
+    |  Target	 |  Schema  |
+    |  Schema Name	 |  DMS_SAMPLE  |
+    |  Action	 |  Make lowercase  |
 
-        - Rule 2:
+- Rule 2:
 
-        |  Parameter	 |  Value  |
-        |----------|------------|
-        |  Target	 |  Table  |
-        |  Schema Name	 |  DMS_SAMPLE  |
-        |  Table Name	 |  %  |
-        |  Action	 |  Make lowercase  |
+    |  Parameter	 |  Value  |
+    |----------|------------|
+    |  Target	 |  Table  |
+    |  Schema Name	 |  DMS_SAMPLE  |
+    |  Table Name	 |  %  |
+    |  Action	 |  Make lowercase  |
 
-        - Rule 3:
+- Rule 3:
 
-        |  Parameter	 |  Value  |
-        |----------|------------|
-        |  Target	 |  Column  |
-        |  Schema Name	 |  `DMS_SAMPLE`  |
-        |  Table Name	 |  `%`  |
-        |  Column Name	 |  `%`  |
-        |  Action	 |  Make lowercase  |
+    |  Parameter	 |  Value  |
+    |----------|------------|
+    |  Target	 |  Column  |
+    |  Schema Name	 |  `DMS_SAMPLE`  |
+    |  Table Name	 |  `%`  |
+    |  Column Name	 |  `%`  |
+    |  Action	 |  Make lowercase  |
 
-    - For SQL Server Source, use:
+    {{% /expand %}}
 
-        |  Parameter	 |  Value  |
-        |----------|------------|
-        |  Target	 |  Schema  |
-        |  Schema Name	 |  `dbo`  |
-        |  Action	 |  Rename to: `dms_sample_dbo`  |
+    {{% expand ">>  For SQL Server Source, use this:" %}}
+
+|  Parameter	 |  Value  |
+|----------|------------|
+|  Target	 |  Schema  |
+|  Schema Name	 |  `dbo`  |
+|  Action	 |  Rename to: `dms_sample_dbo`  |
+
+    {{% /expand %}}
 
 1. Uncheck **Turn on premigration assessmen**t this should collapse this section for our workshop this part there isn't time for and it isn't required.
 
 1. After entering the values, make sure **Migration task startup configuration** is set to start **Automatically on create**, then click on **Create task**.
 
 1. At this point, the task should start running and replicating data from the `**dms_sample**` database running on your source to the Amazon Aurora RDS (PostgreSQL) instance. Note the DMS task will take a moment to create (**Status=creating**), then it will transition into **Status=Ready**, followed by **Status=Starting**, and then **Status=Running**. You can use the circular arrow refresh button to update the status for the task.
+
+1. As the rows are being transferred, you can monitor the task progress:
+
+1. Click on your task and scroll to the **Table statistics** section to view the table statistics to see how many rows have been moved.
+
+1. If there is an error, the status color changes from green to red. Click on **View logs** link for the logs to debug.
