--- a/content/3-MigrateToTarget/3.2-S3/3.2.6-ReplicateChange.md
+++ b/content/3-MigrateToTarget/3.2-S3/3.2.6-ReplicateChange.md
@@ -76,15 +76,11 @@ For SQL Server Source:
     GO
     ```
 
-1. Use Microsoft SQL Server Management Studio to connect to the Target RDS SQL Server instance. The connection information is in the Output tab of Cloudformation service  for the base template/stack "cfn" that was created it should be something like below
+1. Now go back to target S3 bucket and navigate to **_sport_type_** folder. You should see new file with latest timestamp.
 
-1. Open a New Query window or use the one from the prior page where we checked to see if the base tables and data were moved over and execute the following statement:
 
-    ```sql
-    use dms_sample_target
-    SELECT * FROM dms_sample_target.sport_type;
-    GO
-    ```
+1. Download and open the CSV file.
+
 
 {{% notice info %}}
 The new records for that you added for basketball, cricket, hockey, soccer, volleyball to the sports_type table in the source database have been replicated to your dms_sample_ database. You can further investigate the number of inserts, deletes, updates, and DDLs by viewing the Table statistics of your Database migration tasks in AWS console.
