Added pictures to part 1, SQL source pictures, too

--- a/content/2-SelectSource/2.2-SqlSrv/2.2.2-configSrcDb.md
+++ b/content/2-SelectSource/2.2-SqlSrv/2.2.2-configSrcDb.md
@@ -1,8 +1,8 @@
 ---
 title: "Configure The Source MS SQL Server Database"
-weight: 3
+weight: 2
 chapter: false
-pre: "<b> 2.2.3. </b>"
+pre: "<b> 2.2.2. </b>"
 ---
 
 {{% notice info %}}
@@ -11,7 +11,9 @@ When migrating your Microsoft SQL Server database using AWS DMS, you can choose 
 
 {{% /notice %}}
 
-1. With SQL Server Mgmt studio, you are going to execute a sql script that will configure the source sql server database for replication. First ensure there is a query window if not click on the New query icon above the execute button to open a new query window.
+1. With SQL Server Mgmt studio, you are going to execute a sql script that will configure the source sql server database for replication. First ensure there is a query window if not click on the **New query** icon above the execute button to open a new query window.
+
+    ![New Query button](/images/2/2/2/0001.png?width=90pc)
 
 1. Copy the sql commands below using the copy button top right corner of the code block then paste into SQL Server Management Studio query editor and execute the entire code block (**Ctrl + A** for windows user to highlight whole block) and click the execute button.
 
@@ -216,6 +218,8 @@ DROP TABLE #entire_list
 ```
 
 3. Execute the script above
+
+    ![Query Result](/images/2/2/2/0002.png?width=90pc)
 
 ### Summary
 
