--- a/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.1-InstallSCT.md
+++ b/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.1-InstallSCT.md
@@ -5,26 +5,12 @@ chapter: false
 pre: "<b> 3.1.1.1. </b>"
 ---
 
-Reconnected the EC2 instance we used to prepare the source database via rdp or Fleet Manager, we will install the AWS Schema Conversion tool on this server. Downloading the file and installing it will give you the latest version of the AWS Schema Conversion Tool.
-
-1. On the EC2 server, open the **"DMS Workshop"** folder that is on the Desktop. Then, double-click on **"AWS Schema Conversion Tool Download"** to get the latest version of the software like picture below. (Note: if it asks do you want to open this file say **"YES"**.)
-
-1. When the download is complete, unzip the content (double click lower left corner of browser where download occurred or click once and select Open) double click on the install AWS Schema windows install package file and follow the install wizard steps taking the defaults and complete the install the AWS Schema Conversion Tool by clicking finish once done. (like the images below). Note: Fleet Mgr double click can be tricky. Single click and hit enter key with the file highlighted works better some times. If you see Compressed Folder error pop up close this window and try the single click enter key approach vs. double click with mouse. Also sometimes the install wizard gets covered up so see if it is on the task bar at bottom and click on it there it looks like windows installation icon at bottom of RDP screen. If you still have issues ask your AWS contact/instructor.
-
-1. The example installation process is in the following pictures:
-
-    When the installer is complete, the installation dialog will disappear. There is no other notification.
-
-1. Once the installation is complete, open the **Start Menu** and launch the **AWS Schema Conversion Tool** or you can double click on the SCT orange box icon on the desktop.
-
-1. Accept the terms and Conditions.
-
-{{% notice note %}}
-Aurora MySQL will need some additional permissions before we run SCT, so make your you did the following steps before proceeding to the next section.
+{{% notice info %}}
+This section is only for the Aurora (MySQL compatible) target. If you are migrating to a different target, you can skip this page.
 {{% /notice %}}
 
-
 {{%expand "Expand to see this section if your migration target schema is Aurora MySQL" %}}
+
 1. Open **MySQL Workbench 8.0 CE** from within the EC2 server, and create a new database connection for the target Aurora database using the following values. Please note the password is not provided below you need to go to **Secrets Manager** and open **DMSDBSecret** and reveal the SQL Server password. It is also on first Cloudformation Stack's output tab under SQL Server password (yes this is mysql but the passwords are the same for sql server & mysql in this case):
 
 
