--- a/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.2-CreateProject.md
+++ b/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.2-CreateProject.md
@@ -1,5 +1,5 @@
 ---
-title: "Create a Database Migration Project"
+title: "Create a Schema Conversion Project"
 weight: 2
 chapter: false
 pre: "<b> 3.1.1.2. </b>"
@@ -9,7 +9,7 @@ Now that you have installed the AWS Schema Conversion Tool, the next step is to 
 
 ### Specify the source database
 
-1. Within the Schema Conversion Tool, if the new project wizard doesn't start please start it by going to File New Project Wizard top left corner. Once in Project wizard mode, please enter the following values into the form note you'll need to adjust for the source database you selected in the text below and then click **Next**.
+1. Within the Schema Conversion Tool, if the new project wizard doesn't start please start it by going to **File > New Project Wizard** top left corner. Once in **Project wizard** mode, please enter the following values into the form note you'll need to adjust for the source database you selected in the text below and then click **Next**.
 
     |  Parameter 	|  Value  |
     |----------------|------------------------|
@@ -19,6 +19,9 @@ Now that you have installed the AWS Schema Conversion Tool, the next step is to 
     |  Source Database Engine		|  Microsoft SQL Server, Oracle or Source you selected earlier in this session  |
     |  **"I want to"** Radio Button		|  Click/Select **I want to switch engines and optimize for the cloud**  |
 
+    ![New Project Wizard](/images/3/1/1/2/0001.png?width=80pc)
+
+    ![New Project Wizard](/images/3/1/1/2/0002.png?width=80pc)
 
 1. Specify the source database configurations in the form, Please note the password is not provided below you need to goto Secrets Manager and open DMSDBSecret and reveal the SQLServer password value. It is also on first Cloudformation Stack's output tab (SQLServerPassword) and click Test Connection. Once the connection is successfully tested, click **Next**.
 
@@ -60,8 +63,11 @@ Now that you have installed the AWS Schema Conversion Tool, the next step is to 
 
     {{% /expand %}}
 
+    ![New Project Wizard](/images/3/1/1/2/0003.png?width=80pc)
+
 1. Select the **dms_sample** database, then click **Next**. (Note: once you click on database gray/blue bar highlight should appear & **Next** button will be enabled)
 
+    ![New Project Wizard](/images/3/1/1/2/0004.png?width=80pc)
 
 ### Review the Database Migration Assessment Report.
 
@@ -70,6 +76,8 @@ Now that you have installed the AWS Schema Conversion Tool, the next step is to 
     Generally, packages, procedures, and functions are more likely to have some issues to resolve because they contain the most custom or proprietary SQL code. AWS SCT specifies how much manual change is needed to convert each object type. It also provides hints about how to adapt these objects to the target schema successfully.
 
 1. After you are done reviewing the database migration assessment report, click **Next**.
+
+    ![New Project Wizard](/images/3/1/1/2/0005.png?width=80pc)
 
 ### Specify the target database
 
@@ -108,6 +116,10 @@ Specify the target database configurations in the form, Please note the password
 
 {{% /expand %}}
 
+![New Project Wizard](/images/3/1/1/2/0006.png?width=80pc)
+
+![New Project Wizard](/images/3/1/1/2/0007.png?width=80pc)
+
 {{% notice info %}}
-After hitting Next and loading metadata, you may get a warning message saying: Metadata loading was intrupted because of data fetching issues. You can ignore this message as it doesn't affect us in this workshop. Note it will take a few minutes for SCT to analyze the database objects
+After hitting **Next** and loading metadata, you may get a warning message saying: Metadata loading was intrupted because of data fetching issues. You can ignore this message as it doesn't affect us in this workshop. Note it will take a few minutes for SCT to analyze the database objects
 {{% /notice %}}
