--- a/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.1-ConfigMySQL.md
+++ b/content/3-MigrateToTarget/3.1-RDSandAurora/3.1.1-SchemaConv/3.1.1.1-ConfigMySQL.md
@@ -1,5 +1,5 @@
 ---
-title: "Install Schema Conversion Tool"
+title: "Granting permissions in the target database"
 weight: 1
 chapter: false
 pre: "<b> 3.1.1.1. </b>"
@@ -13,6 +13,7 @@ This section is only for the Aurora (MySQL compatible) target. If you are migrat
 
 1. Open **MySQL Workbench 8.0 CE** from within the EC2 server, and create a new database connection for the target Aurora database using the following values. Please note the password is not provided below you need to go to **Secrets Manager** and open **DMSDBSecret** and reveal the SQL Server password. It is also on first Cloudformation Stack's output tab under SQL Server password (yes this is mysql but the passwords are the same for sql server & mysql in this case):
 
+    ![Open MySQL Workbench and Create a connection](/images/3/1/1/1/0000.png?width=75pc)
 
     |  Parameter	 |  Value  |
     |-------------|---------------------------|
@@ -20,12 +21,18 @@ This section is only for the Aurora (MySQL compatible) target. If you are migrat
     |  Host Name	 |  <TargetAuroraMySQLEndpoint> - you can find this on **Cloudformation > cfn > output tab** or you can goto RDS in the AWS console and find your Aurora MySQL Target instance
     |  Port	 |  3306  |
     |  Username	 |  `dbadmin`  |
-    |  Password	 |  See Cloudformation Output tab & DMSDBSecretP or look it up in AWS Secrets Manager for SQL Server  |
+    |  Password (Enter after clicking **Test Connection**)	 |  See **Cloudformation Output** tab & **_DMSDBSecretP_** or look it up in AWS Secrets Manager for SQL Server  |
     |  Default Schema	 |  leave blank  |
 
-1. Click Test Connection button. After you receive a message stating “Successfully made the MySQL connection”, click OK.
+    ![Open MySQL Workbench and Create a connection](/images/3/1/1/1/0001.png?width=75pc)
+
+1. Click **Test Connection** button and enter the password. After you receive a message stating **“Successfully made the MySQL connection”**, click **OK**.
+
+    ![Open MySQL Workbench and Create a connection](/images/3/1/1/1/0002.png?width=75pc)
 
 1. Click on the Target Aurora RDS (MySQL) from the list of MySQL Connections in SQL Workbench to connect to the target database.
+
+    ![Open MySQL Workbench and Create a connection](/images/3/1/1/1/0003.png?width=75pc)
 
 1. Copy the following permission sql statements and execute them in the workbench tool (Lighting icon is execute/run icon).
 
@@ -55,7 +62,9 @@ This section is only for the Aurora (MySQL compatible) target. If you are migrat
     grant UPDATE ON aws_sqlserver_ext.* to 'dbadmin';
     ```
 
-After execution, the output should look something like the image below. We suggest you keep MySQL workbench open as you'll come back to it later in the DMS section.
+    After execution, the output should look something like the image below. We suggest you keep MySQL workbench open as you'll come back to it later in the DMS section.
+
+    ![Open MySQL Workbench and Create a connection](/images/3/1/1/1/0004.png?width=75pc)
 
 You can now change the EC2 instance you are RDP-ed into back to the Schema conversion tool and click Next below.
 {{% /expand%}}
