--- a/content/en/4-Serverless/4.2-ScaleTesting/4.2.1-GenerateLoad.md
+++ b/content/en/4-Serverless/4.2-ScaleTesting/4.2.1-GenerateLoad.md
@@ -43,8 +43,6 @@ If you do not change these settings, the DMS task will throttle when `MemoryLimi
 
     - Under **Compute Settings**, change the **Maximum DMS Capacity Units (DCU)** to **16**.
 
-    - 
-
 3. **Save changes and resume the task:**
 
     - Resume the task once the changes are saved and status changes from **"Modifying"** to **"Stopped"** state.
@@ -55,7 +53,7 @@ If you do not change these settings, the DMS task will throttle when `MemoryLimi
 
     _**Note:** expand only for the source in your scenario. You can skip other sources._
 
-For SQL Server as Source:
+#### For SQL Server as Source:
 
 2. **Run SQL load script:**
 
