--- a/content/en/4-Serverless/4.2-ScaleTesting/4.2.3-MonitorDownscale.md
+++ b/content/en/4-Serverless/4.2-ScaleTesting/4.2.3-MonitorDownscale.md
@@ -13,4 +13,4 @@ Once the CDC load has been catchup, the cooling period is for an hour where DMS 
 
 - Output of CloudWatch logs showing Serverless replication scaling down from 8 DCU to 4 DCU
 
-You have now completed the serverless module. If you are running in your own account be sure to complete the event clean up section Environment Cleanup
+You have now completed the serverless module. If you are running in your own account be sure to complete the event clean up section [Resource and Environment Cleanup](../../7-CleanUp/).
