--- a/content/en/5-Monitoring/5.2-EventNotifications.md
+++ b/content/en/5-Monitoring/5.2-EventNotifications.md
@@ -23,6 +23,6 @@ AWS DMS generates various events at DMS instance & task level which you can subs
 
 1. To test event notifications, lets go ahead and perform some action on DMS replication instance. For example, create new replication instance/ reboot instance/ change replication instance class etc. To verify DMS events created for these activities, on DMS console, select **Events** from left side column. As in this lab, we have created event notifications at **replication-instance** level, you should receive email for all events for type **replication-instance**.
 
-1. sHere is an example of a **DMS event notification email**. If you are using personal email address but don’t see email coming to inbox, check if emails are sent to spam folder. When you are using company email address, make sure that firewall is not blocking these notifications.
+Here is an example of a **DMS event notification email**. If you are using personal email address but don’t see email coming to inbox, check if emails are sent to spam folder. When you are using company email address, make sure that firewall is not blocking these notifications.
 
 You may repeat above steps to create another event subscription for getting notifications on **DMS task events**.
