--- a/content/en/5-Monitoring/5.3-TableStatistics.md
+++ b/content/en/5-Monitoring/5.3-TableStatistics.md
@@ -9,6 +9,6 @@ The AWS DMS console updates information regarding the state of your tables durin
 
 To view table statistics of your DMS task, Go to the [**AWS DMS console**](https://console.aws.amazon.com/dms/v2/home#dashboard) and click on **Replication Tasks** in the left side column. Click on the task from the list in right side.
 
-On **DMS task** page, navigate to **Table statistics** tab. Here you will find statistics for all tables in scope of **DMS task migration**.
+On **DMS task** page, navigate to **Table statistics** tab. Here you will find statistics for all tables in scope of **DMS migration task**.
 
 Description of each column in table statistics is discussed [here](https://aws.amazon.com/premiumsupport/knowledge-center/table-statistics-aws-dms-task/).
