--- a/content/en/6-Troubleshooting/6.1-MemoryPressure/6.1.1-EnvironmentCreation.md
+++ b/content/en/6-Troubleshooting/6.1-MemoryPressure/6.1.1-EnvironmentCreation.md
@@ -26,7 +26,7 @@ In this troubleshooting exercise, we are going to use resources (DMS task/RDS in
 5. Monitor DMS instance cloud watch metrics. When load on DMS instance memory increases, you may notice decrease in **Freeable Memory** and increase/fluctuations in **SwapUsage**. Also monitor DMS task status. After sometime, you will notice that DMS task status is changed to **Failed**.
 
 
-6. Navigate to failed DMS task, under **Overview** details tab, notice the **Last failure** message. If DMS task failed due to memory pressure on DMS instance, you will see the message **"Last Error Replication task out of memory. Stop Reason `FATAL_ERROR` Error Level `FATAL`."**
+6. Navigate to failed DMS task, under **Overview details** tab, notice the **Last failure** message. If DMS task failed due to memory pressure on DMS instance, you will see the message **"Last Error Replication task out of memory. Stop Reason `FATAL_ERROR` Error Level `FATAL`."**
 
 At this stage, we are able to successfully create the scenario where DMS task fails due to memory pressure on DMS instance!
 
