--- a/content/en/6-Troubleshooting/6.1-MemoryPressure/6.1.2-TroubleshootingSteps.md
+++ b/content/en/6-Troubleshooting/6.1-MemoryPressure/6.1.2-TroubleshootingSteps.md
@@ -23,4 +23,4 @@ Regardless of cause of failures, troubleshooting should follow below steps:
 
     However, when task fails due to memory pressure, DMS doesn’t get time to cleanly stop the task and write logs. Hence if you refer to DMS task logs in these scenarios, you might not find any useful information for troubleshooting.
 
-5. In case of memory pressure on **DMS replication instance**, you may also want to verify how many DMS tasks are running on specific instance. To verify this, navigate to **DMS replication instance** page where on top right you will notice section called Associated migration tasks. To get a list of all DMS task running on that instance, switch to Migration tasks tab. At this section, you can review list of task with their status.
+5. In case of memory pressure on **DMS replication instance**, you may also want to verify how many DMS tasks are running on specific instance. To verify this, navigate to **DMS replication instances** page where on top right you will notice section called Associated migration tasks. To get a list of all DMS task running on that instance, switch to Migration tasks tab. At this section, you can review list of task with their status.
