--- a/content/en/7-CleanUp/7.1-DeleteServerlessTask.md
+++ b/content/en/7-CleanUp/7.1-DeleteServerlessTask.md
@@ -17,4 +17,4 @@ pre: "<b> 7.1. </b>"
 
 1. Confirm that you want to delete the replication.
 
-Continue to the next page to delete the DMS Endpoints...
+Continue to page 7.3 to delete the DMS Endpoints...
