--- a/content/en/7-CleanUp/7.2-DeleteDMSTask.md
+++ b/content/en/7-CleanUp/7.2-DeleteDMSTask.md
@@ -17,4 +17,4 @@ pre: "<b> 7.2. </b>"
 
 6. Confirm that you want to delete the migration task.
 
-Continue to the next page to delete the DMS Endpoints...
+Continue to page 7.3 to delete the DMS Endpoints...
