--- a/content/en/2-SelectSource/2.1-Oracle/2.1.2-configSrcDb.md
+++ b/content/en/2-SelectSource/2.1-Oracle/2.1.2-configSrcDb.md
@@ -76,6 +76,8 @@ Similarly, you need to enable table-level supplemental logging for each table th
     alter table dms_sample.nfl_data add supplemental log data (ALL) columns;
     ```
 
+![](/images/2/1/2/0001.png?width=90pc)
+
 ### Summary
 
 This lab demonstrated steps for setting Oracle database as a source for Database Migration. The next steps are to select your target and follow the steps to move your Oracle data to it.
