--- a/content/en/5-Monitoring/5.1-CloudWatchMetrics.md
+++ b/content/en/5-Monitoring/5.1-CloudWatchMetrics.md
@@ -15,6 +15,8 @@ To view CloudWatch metrics for DMS replication instance, Go to the [**AWS DMS co
 
 To view CloudWatch metrics for DMS tasks, Go to the [**AWS DMS console**](https://console.aws.amazon.com/dms/v2/home#dashboard) and click on **Database Migration Task** in the left side column. Click on your DMS task from the list of tasks.
 
-Once you are on **DMS task** page, navigate to **CloudWatch metrics** tab.
+Once you are on **DMS task** page, navigate to **Monitoring** tab.
+
+![](/images/5/1/0001.png?width=90pc)
 
 Next, we will learn about AWS DMS events and how to setup notifications for those events.
