--- a/content/vi/5-Monitoring/5.1-CloudWatchMetrics.md
+++ b/content/vi/5-Monitoring/5.1-CloudWatchMetrics.md
@@ -17,4 +17,6 @@ Số liệu CloudWatch cho trình sao chép chép DMS có thể hữu ích trong
 
 Khi bạn vào trang **DMS task**, hãy điều hướng đến tab **CloudWatch metrics**.
 
+![](/images/5/1/0001.png?width=90pc)
+
 Tiếp theo, chúng ta sẽ tìm hiểu về các sự kiện AWS DMS và cách thiết lập thông báo cho các sự kiện đó.
