--- a/content/en/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
+++ b/content/en/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
@@ -18,6 +18,8 @@ The environment for this lab consists of:
 
 1. On the **Serverless replications** page, click the **Create Replication** button.
 
+    ![](/images/4/1/1/0001.png?width=90pc)
+
 1. **Configure Your Replication**
     Provide a **name** to your Serverless replication and Configure replication to connect to your source and target databases. During this step, you'll need to specify **Source and Target endpoint**. You'll also configure the replication to perform a full load (migrating existing data) and enable **Change Data Capture (CDC)** to replicate ongoing changes from the source to the target database.
 
@@ -27,6 +29,8 @@ The environment for this lab consists of:
     |  Source database endpoint	 |  Your source database endpoint (SQL Server or Oracle) , Example: `**sql-server-source**`  |
     |  Target database endpoint	 |  Your target database endpoint(MySQL or PostgreSQL) , Example: `**mysql-target**`  |
     |  Migration type	 |  Full Load and CDC ( Migrate existing data and replicate ongoing changes)  |
+
+    ![](/images/4/1/1/0002.png?width=90pc)
 
 1. Configure Additional Settings
 
@@ -38,6 +42,10 @@ The environment for this lab consists of:
     |  Max LOB size	 |  32 KB	 |  This specifies the maximum size for LOB columns that will be replicated.  |
     |  Turn on validation	 |  Keep it unchecked i.e. OFF	 |  Validation can be resource-intensive and is not always necessary for all scenarios.  |
     |  Turn on cloudwatch logs	 |  turn it on and keep all the "default".	 |  This will allow you to monitor the replication process and troubleshoot any issues that arise.  |
+
+    ![](/images/4/1/1/0003.png?width=90pc)
+    
+    ![](/images/4/1/1/0004.png?width=90pc)
 
 1. Set Up Table Selection Rules
 
@@ -58,6 +66,8 @@ The environment for this lab consists of:
     |  Schema	 |  dbo%  |
     |  Table name	 |  %  |
     |  Action	 |  Include  |
+
+    ![](/images/4/1/1/0005.png?width=90pc)
 
 {{% notice note %}}
 If the Create Task screen does not recognize any schemas, make sure to go back to endpoints screen and click on your endpoint. Scroll to the bottom of the page and click on Refresh Button (⟳) in the Schemas section. If your schemas still do not show up on the Create Task screen, click on the Guided tab and manually select ‘dbo’ schema and all tables.
@@ -103,6 +113,8 @@ If the Create Task screen does not recognize any schemas, make sure to go back t
         |  Schema Name	 |  `dbo`  |
         |  Action	 |  Rename to: `dms_sample_dbo`  |
 
+    ![](/images/4/1/1/0006.png?width=90pc)
+
 1. **Specify Network related Settings**
 
     Under the **Compute** settings, choose the **VPC** and **subnet** where the replication will be created. Additionally, select the appropriate **security group**.
@@ -123,6 +135,8 @@ If the Create Task screen does not recognize any schemas, make sure to go back t
     |  Availability	 |  Single-AZ  |
     |  Availability Zone	 |  No Preference  |
 
+    ![](/images/4/1/1/0007.png?width=90pc)
+
 1. **Select Minimum and Maximum DMS Capacity Units (DCU)**
 
     Under Capacity Settings, Select Minimum and Maximum DMS Capacity units (DCU). Replication compute capacity in AWS DMS is measured in DMS Capacity Units (DCU). Each DCU provides 2 GiB of memory along with corresponding compute and networking resources
@@ -132,18 +146,28 @@ If the Create Task screen does not recognize any schemas, make sure to go back t
     |  Minimum DMS Capacity units (DCU)	 |  1  |
     |  Maximum DMS Capacity units (DCU)	 |  4  |
 
+    ![](/images/4/1/1/0008.png?width=90pc)
+
 1. **Review and Create Replication**
 
     Review all your configurations, and then initiate the Serverless replication by clicking **Create Replication**.
 
 1. If all parameters were correct and validation was successful then the newly created replication will be visible under **Serverless Replication**.
 
+    ![](/images/4/1/1/0009.png?width=90pc)
+
 1. **Start Replication**
 
     To begin migrating data from the source to the target database, start the serverless replication. Select the replication and, under **Actions**, choose **Start**.
 
+    ![](/images/4/1/1/0010.png?width=40pc)
+
     On the **Start replication** page, Select **Don't stop CDC** and then Click on **Start Replication**.
 
+    ![](/images/4/1/1/0011.png?width=90pc)
+
     The replication process would immidiately start.
+
+    ![](/images/4/1/1/0012.png?width=90pc)
 
 This concludes the replication creation process, and your replication is now starting. The Serverless replication process consists of 8 stages, which you can monitor under the Status column. Please proceed to the next page for a detailed overview of each stage.
