--- a/content/en/5-Monitoring/5.3-TableStatistics.md
+++ b/content/en/5-Monitoring/5.3-TableStatistics.md
@@ -11,4 +11,6 @@ To view table statistics of your DMS task, Go to the [**AWS DMS console**](https
 
 On **DMS task** page, navigate to **Table statistics** tab. Here you will find statistics for all tables in scope of **DMS migration task**.
 
+![](/images/5/3/0001.png?width=90pc)
+
 Description of each column in table statistics is discussed [here](https://aws.amazon.com/premiumsupport/knowledge-center/table-statistics-aws-dms-task/).
