--- a/content/vi/5-Monitoring/5.3-TableStatistics.md
+++ b/content/vi/5-Monitoring/5.3-TableStatistics.md
@@ -11,4 +11,6 @@ Bảng điều khiển AWS DMS cập nhật thông tin liên quan đến trạng
 
 Trên trang **DMS task**, điều hướng đến tab **Table statistics**. Tại đây, bạn sẽ tìm thấy số liệu thống kê cho tất cả các bảng trong phạm vi **Tác vụ DMS**.
 
+![](/images/5/3/0001.png?width=90pc)
+
 Mô tả về từng cột trong số liệu thống kê bảng được thảo luận [tại đây](https://aws.amazon.com/premiumsupport/knowledge-center/table-statistics-aws-dms-task/).
